style: orbment line

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -54,3 +54,19 @@ $orbment-silver: radial-gradient(
   #757575 80%,
   #666666 100%
 );
+
+
+$orbment-line1: linear-gradient(90deg, #ffffff, #c59e00, #ffffff);
+$orbment-line1-light: linear-gradient(90deg, #ffffff, #c59e00, #ffffff);
+
+$orbment-line2: linear-gradient(90deg, #ffffff, #0086c5, #ffffff);
+$orbment-line2-light: linear-gradient(90deg, #ffffff, #0086c5, #ffffff);
+
+$orbment-line3: linear-gradient(90deg, #ffffff, #c50000, #ffffff);
+$orbment-line3-light: linear-gradient(90deg, #ffffffd5, #c50000d5, #ffffffd5);
+
+$orbment-line4: linear-gradient(90deg, #ffffff, #c500a1, #ffffff);
+$orbment-line4-light: linear-gradient(90deg, #ffffffd5, #c500a1d5, #ffffffd5);
+
+$orbment-line5: linear-gradient(90deg, #ffffff, #2bc500, #ffffff);
+$orbment-line5-light: linear-gradient(90deg, #ffffffd5, #2bc500d5, #ffffffd5);
